much more analysis...

--- a/forcing/bio/CanOE_NO3_interpolation-multi-core.ipynb
+++ b/forcing/bio/CanOE_NO3_interpolation-multi-core.ipynb
@@ -11,26 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/ocean/brogalla/GEOTRACES/analysis-birgit/cmocean-master/cmocean/tools.py:76: MatplotlibDeprecationWarning: The is_string_like function was deprecated in version 2.1.\n",
-      "  if not mpl.cbook.is_string_like(rgbin[0]):\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import netCDF4 as nc\n",
-    "from salishsea_tools import nc_tools, viz_tools\n",
     "import datetime\n",
     "from mpl_toolkits.basemap import Basemap, cm\n",
     "import cmocean"
@@ -45,13 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = '/data/brogalla/ANHA12/ANHA12-EXH006_5d_gridT_y2002m01d05.nc'\n",
+    "mesh = '/data/brogalla/ANHA12/2015/ANHA12-EXH006_y2015m01d05_gridT.nc'\n",
     "m = nc.Dataset(mesh)\n",
     "mdepth = m.variables['deptht']\n",
     "mlons = m.variables['nav_lon']\n",
@@ -59,9 +45,10 @@
     "mdepth = np.array(mdepth)\n",
     "mlons = np.array(mlons)\n",
     "mlats = np.array(mlats)\n",
+    "\n",
     "# Mask:\n",
-    "mask = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12_mask.nc')\n",
-    "tmask = mask.variables['tmask']\n",
+    "mask  = nc.Dataset('/ocean/brogalla/GEOTRACES/ariane_runs/ANHA12_Ariane_mesh.nc')\n",
+    "tmask = np.array(mask.variables['tmask'])\n",
     "tmask = np.array(tmask[0,:,:,:])\n",
     "cond = (tmask > 0.1) \n",
     "Z_masked = np.ma.masked_where(cond, tmask) "
@@ -76,10 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_data(year):\n",
@@ -98,10 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def interp_depths(var,CanOE_depth, mdepth,fill):\n",
@@ -124,10 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def interp_horizon(month, lon, lat, i_NO3, mlons=mlons, mlats=mlats):\n",
@@ -156,10 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def save_NO3(filename, field):\n",
@@ -196,10 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_sample(NO3, mlons=mlons, mlats=mlats):\n",
@@ -237,10 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "year = 2003"
@@ -255,10 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lat, lon, depth, NO3 = load_data(year)"
@@ -273,10 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -284,7 +255,7 @@
        "(12, 50, 400, 568)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,10 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def joblib_solver(interp_horizon,month,lon,lat,i_NO3):\n",
@@ -323,10 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "months=np.arange(0,12)\n",
@@ -340,9 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -372,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -402,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -428,9 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -469,9 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -615,9 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "NO3 = i_NO3\n",
@@ -703,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
